@@ -1,7 +1,6 @@
 # These tests will only work if you have an OTMql4AMQP enabled Metatrader running,
 # the Experts/OTMql4/OTPyTestPikaEA.mq4 attached to a chart in it, and
 # the RabbitMQ server configured and running.
-#
 set echo True
 # We need a listener thread running, subscribed to retval.#
 sub run retval.# timer.#
@@ -9,8 +8,10 @@ py import time
 py time.sleep(15)
 # all the charts the listener has heard of
 chart list
+py assert type(self._G) == list and len(self._G) > 0
 # set the default chart to be the last chart the listener has heard of
 chart set
 # get the default chart to be published or subscribed to
 chart get
+py assert type(self._G) == str and len(self._G) > 0
 
