@@ -7,6 +7,14 @@ set echo True
 sub run retval.# timer.#
 py import time
 py time.sleep(15)
+# get the list of charts we have seen because of listening to the timer
+chart list
+py assert type(self._G) == list and len(self._G) > 0
+# set the default chart to the first of list of charts we have seen
+chart set
+# check the default chart 
+chart get
+py assert type(self._G) == str and len(self._G) > 0
 pub wait AccountBalance
 py assert type(self._G) == float and type(self._G) > 0
 pub wait AccountCompany
@@ -23,7 +31,7 @@ py assert type(self._G) == float
 pub wait AccountLeverage
 py assert type(self._G) == int and self._G > 0
 pub wait AccountMargin
-py assert type(self._G) == int
+py assert type(self._G) == float
 pub wait AccountName
 py assert type(self._G) == str and len(self._G) > 3
 pub wait AccountNumber
